--- a/listen_local_app/templates/index.html
+++ b/listen_local_app/templates/index.html
@@ -7,12 +7,21 @@
 <h1>Listen Local</h1>
 <p>This app will take your local information and make a spotify playlist of all the bands playing near you!</p>
 
-<form action="/do_it" method="post">
-  Zip Code:<br>
-  <input type="text" name="zipcode" value="">
-  <input name="daterange" id="datepick" class="flatpickr flatpickr-input" type="text" placeholder="Select Date.." data-id="datetime" readonly="readonly">
-  <input type="submit" value="Submit">
-</form> 
+{% from "_formhelpers.html" import render_errors %}
+<form action = "/" method = post>
+ <fieldset>
+    <legend></legend>
+      <!-- {{ form.hidden_tag() }} -->
+      {{ form.csrf_token }}
+      {{ form.zipcode.label }}<br>
+      {{ form.zipcode }}<br>
+      {{ render_errors(form.zipcode) }}<br>
+      {{ form.daterange.label }}<br>
+      {{ form.daterange(class_="flatpickr flatpickr-input", id="datepick", readonly="readonly", placeholder="Select Date.." ) }}<br>
+      {{ render_errors(form.daterange) }}<br>
+      {{ form.submit }}
+ </fieldset>
+</form>
 
 <p>Your Spotify login information is used to make the playlist, and nothing else</p>
 
