--- a/listen_local_app/templates/error.html
+++ b/listen_local_app/templates/error.html
@@ -1,2 +1,8 @@
+{% extends "layout.html" %}
+
+{% block content %}
+
 <h1>Whoops! Looks like there was a problem</h1>
 {{error_text}} 
+
+{% endblock %}
