icon links to main page

--- a/listen_local_app/templates/layout.html
+++ b/listen_local_app/templates/layout.html
@@ -24,7 +24,7 @@
 
 <section class="py-5 h-100">
    <div class="my-5 p-5 mx-auto col-md-7 col-lg-7 col-xl-7 col-10 text-center" id="appbody">
-        <i class="fas fa-headphones-alt mainicon  mx-auto my-4"></i>
+        <a href="/"><span style="color:white"><i class="fas fa-headphones-alt mainicon  mx-auto my-4"></i></span></a>
         <h1 class="heading mb-4">Listen Local</h1>
         
         {% block content %}{% endblock %}
