--- a/listen_local_app/static/css/style.css
+++ b/listen_local_app/static/css/style.css
@@ -89,6 +89,10 @@ hr {
     overflow: scroll;
 }
 
+th.datafram td.datafram {
+    padding:5px
+}
+
 tr {
     border-bottom: 1px solid rgba(255,255,255,0.25)
 }
