--- a/listen_local_app/templates/layout.html
+++ b/listen_local_app/templates/layout.html
@@ -32,7 +32,7 @@
         <p class="small text-muted">Your Spotify login information is used to make the playlist, and nothing else.</p>
         <hr class="my-4">
         <p class="small text-muted">
-            App by <a href="https://github.com/pgrauman">@pgrauman</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> Design by <a href="https://www.designbyjaki.com">@heyitsjaki</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas  fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> App powered with <a href="#">Spotify</a> and <a href="#">Seatgeek</a> APIs 
+            App by <a href="https://github.com/pgrauman">@pgrauman</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> Design by <a href="https://www.designbyjaki.com">@heyitsjaki</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas  fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> App powered with <a href="https://www.spotify.com/">Spotify</a> and <a href="https://seatgeek.com">Seatgeek</a> APIs 
         </p>
 
     </div>
