style tweaks from heyitsjaki

--- a/listen_local_app/templates/results.html
+++ b/listen_local_app/templates/results.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 
-{% block content %}
+{% block success %}
 <h3 class="mt-5 mb-4">Success! <br class="d-auto d-xl-none d-lg-none">Enjoy your playlist</h3>
+{% endblock %}
+
+{% block content %}
+
 {{playlist_html|safe}} 
 
 <div class="mx-4 my-5 px-4">
