--- a/listen_local_app/templates/layout.html
+++ b/listen_local_app/templates/layout.html
@@ -23,10 +23,12 @@
 </head>
 
 <section class="py-5 h-100">
-   <div class="my-5 p-5 mx-auto col-md-7 col-lg-7 col-xl-7 col-10 text-center" id="appbody">
+   <div class="my-5 py-4 px-0 mx-auto col-md-7 col-lg-7 col-xl-7 col-10 text-center" id="appbody">
+      <div class="mx-4 my-5 px-4">
         <a href="/"><span style="color:white"><i class="fas fa-headphones-alt mainicon  mx-auto my-4"></i></span></a>
         <h1 class="heading mb-4">Listen Local</h1>
-        
+        {% block success %}{% endblock %}
+      </div>
         {% block content %}{% endblock %}
 
         <p class="small text-muted">Your Spotify login information is used to make the playlist, and nothing else.</p>
