--- a/listen_local_app/templates/index.html
+++ b/listen_local_app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<div class="mx-4">
 <P>This app takes your zip code and makes a spotify playlist of all the bands playing near you!</P>
 
 {% from "_formhelpers.html" import render_errors %}
@@ -10,8 +11,8 @@
       {{ render_errors(form.daterange) }}<br>
       {{ form.zipcode(class_="form-control m-2") }}
       {{ form.daterange(class_="flatpickr flatpickr-input form-control m-2", id="datepick", readonly="readonly", placeholder="Select Date.." ) }}
-      {{ form.distance }}
+      {{ form.distance(class_="form-control m-2") }}
       {{ form.submit(class_="btn btn-primary m-2", value="submit") }}
 </form>
-</form>
+</div>
 {% endblock %}
