--- a/listen_local_app/templates/layout.html
+++ b/listen_local_app/templates/layout.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<section class="py-5 h-100">
+<section class="py-5">
    <div class="my-5 py-4 px-0 mx-auto col-md-7 col-lg-7 col-xl-7 col-10 text-center" id="appbody">
       <div class="mx-4 my-5 px-4">
         <a href="/"><span style="color:white"><i class="fas fa-headphones-alt mainicon  mx-auto my-4"></i></span></a>
