move errors; ask for fewer permissions

--- a/listen_local_app/templates/layout.html
+++ b/listen_local_app/templates/layout.html
@@ -42,7 +42,7 @@
 </section>
 
 <script type="text/javascript">
-  $("#datepick").flatpickr({dateFormat: "Y-m-d", defaultDate: "today", mode: "range"})
+  $("#datepick").flatpickr({dateFormat: "Y-m-d", mode: "range"})
 </script>
 
 
