Check if a playlist exists already

--- a/listen_local_app/templates/results.html
+++ b/listen_local_app/templates/results.html
@@ -2,6 +2,7 @@
 
 {% block success %}
 <h3 class="mt-5 mb-4">Success! <br class="d-auto d-xl-none d-lg-none">Enjoy your playlist</h3>
+{{exists_html|safe}}
 {% endblock %}
 
 {% block content %}
