Style changes for error message + favicon
Styled the error messages and also added a favicon to the site.  Also made a few changes to the footer (to get rid of the widow in the mobile view).

--- a/listen_local_app/templates/_formhelpers.html
+++ b/listen_local_app/templates/_formhelpers.html
@@ -3,7 +3,7 @@
   <!-- <dt>{{ field.label }} -->
   {% if field.errors %}
     {% for error in field.errors %}
-      <li>{{ error }}</li>
+      <li style="list-style-type: none; color: red;">{{ error }}</li>
     {% endfor %}
   {% endif %}
 {% endmacro %}
