--- a/listen_local_app/templates/error.html
+++ b/listen_local_app/templates/error.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Whoops! Looks like there was a problem</h1>
-{{error_text}} 
+<h1 class="m-4">Whoops! Looks like there was a problem</h1>
+<P class="m-4">{{error_text}}</P> 
 
 {% endblock %}
