--- a/listen_local_app/templates/index.html
+++ b/listen_local_app/templates/index.html
@@ -12,7 +12,7 @@
       {{ form.distance(class_="form-control m-2") }}
       {{ form.submit(class_="btn btn-primary m-2", value="submit") }}
 </form>
-<ul class=errors>
+<ul class="errors p-0">
     {{ render_errors(form.zipcode) }}
     {{ render_errors(form.daterange) }}
 </ul>
