--- a/listen_local_app/templates/layout.html
+++ b/listen_local_app/templates/layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Quicksand" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='img/icon.png') }}" />
   <style type="text/css">
     body, html {background-image: url({{ url_for('static', filename='img/cover.jpg') }})}
   </style>
@@ -34,8 +34,8 @@
       <div class="mx-4">
         <p class="small text-muted">Your Spotify login information is used to make the playlist, and nothing else.</p>
         <hr class="my-4">
-        <p class="small text-muted">
-            App by <a href="https://github.com/pgrauman">@pgrauman</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> Design by <a href="https://www.designbyjaki.com">@heyitsjaki</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas  fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> App powered with <a href="https://www.spotify.com/">Spotify</a> and <a href="https://seatgeek.com">Seatgeek</a> APIs 
+        <p class="small text-muted my-5">
+            App by <a href="https://github.com/pgrauman">@pgrauman</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> Design by <a href="https://www.designbyjaki.com">@heyitsjaki</a> <br class="d-block d-md-none d-lg-none d-xl-none"><i class="fas  fa-grip-lines-vertical mx-2 d-none d-md-inline d-lg-inline d-xl-inline"></i> App powered with <br class="d-block d-md-none d-lg-none d-xl-none"><a href="https://www.spotify.com/">Spotify</a> and <a href="https://seatgeek.com">Seatgeek</a> APIs 
         </p>
       </div>
     </div>
